--- a/docs/02_architecture_constraints.adoc
+++ b/docs/02_architecture_constraints.adoc
@@ -5,7 +5,11 @@
 [role="arc42help"]
 ****
 .Contents
-Any requirement that constrains software architects in their freedom of design and implementation decisions or decision about the development process. These constraints sometimes go beyond individual systems and are valid for whole organizations and companies.
+En este proyecto vamos a tener varias restricciones de arquitectura:
+
+* Restricción temporal: tenemos aproximadamente un cuatrimestre para tener una versión de lanzamiento de la aplicación.
+* Restricción de alcance: esta app tiene como función que los usuarios puedan realizar como mínimo diferentes funciones como guardar lugares; asociar puntuaciones, comentarios y o fotos a los lugares; visualizarlos en un mapa; informarse sobre estos; filtrar las ubicaciones. Además se debe respetar la privacidad de cada usuario en la medida de lo posible.
+* La información sobre los lufares de cada usuario se debe guardar en su pod personal.
 
 .Motivation
 Architects should know exactly where they are free in their design decisions and where they must adhere to constraints.
