--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -1,35 +1,41 @@
 [[section-introduction-and-goals]]
-== Introduction and Goals
+== Introducción a la aplicación
 
 [role="arc42help"]
 ****
-Describes the relevant requirements and the driving forces that software architects and development team must consider. These include
-
-* underlying business goals, essential features and functional requirements for the system
-* quality goals for the architecture
-* relevant stakeholders and their expectations
-****
-
 LoMap es un aplicación solicitada por el ayuntamiento de Bruselas. Esta se encargará de generar mapas personalizados para cualquier ciudadano que desee utilizarla. En este mapa personalizado se pueden almacenar sitios favoritos (de multitud de categorías), reseñas y se puede generar una red de amigos para tener acceso a sus sitios y reseñas.
+****
 
-=== Requirements Overview
+=== Requisitos funcionales
 
 [role="arc42help"]
 ****
 
+Requisitos prioritarios:
 * Varias categorías de lugares.
 * Interfaz tipo mapa.
 * Se pueden crer reseñas y comentarios sobre tus lugares.
 * Existe una red de amigos para compartir reseñas, comentarios y lugares.
 * Existirán los filtros para poder visualizar la información deseada en cada momento.
 
+Requisitos de segundo nivel:
+* Incorporar el concepto de ruta que unirá varios lugares.
+* Los establecimientos podrán crear pods de su negocio para interactuar con los usuarios.
+* Poder comparar mapas, aplicando filtros a las comparaciones.
+* Generar boletines de noticias personalizados en función de los lugares favoritos del usuario.
+* Introducir la gamificacón (permitir descubrir lugares, almacenar información sobre ellos,etc)
+* Incorporar los mapas compartidos entre varios usuarios
+* Incluir roles dentro de la aplicación 
+* Los dueños de negocios podrán crear sus mapas con lugares recomendados en las inmediaciones de su negocio.
+* Conectar con el libro de direcciones para mostrar información recomendada.
+
 ****
 
-=== Quality Goals
+=== Objetivos de calidad
 
 [role="arc42help"]
 ****
-Principales objetivos de calidad para satisfacer las necesidades de los stakeholders.
+Principales objetivos de calidad para satisfacer los intereses de los stakeholders y las necesidades de los usuarios.
 
 [options="header",cols="1,2"]
 |===
@@ -37,20 +43,21 @@ Principales objetivos de calidad para satisfacer las necesidades de los stakehol
 |Privacidad|La privacidad para LoMap es de vital importancia debido a que los datos de los usuarios no deben ser accesibles por terceros no deseados. La información se almacenara en los Pods de cada usuario y la información almacenada en servidores comunes deberá ser minimizada y justificada.
 |Flexibilidad|LoMap debe ser una aplicación flexible que permita su uso en otros contextos geográficos alejados de la ciudad de Bruselas.
 |Mantenibilidad|El código de LoMap debe seguir lso estándares de diseño adecuados para generar una aplicación mantenible en el futuro.
+|Escalable|LoMap debe ser una aplicación implementada con la intención de crecer y abarcar más funcionalidades. El código escrito debe facilitar esta dinámica.
+|Accesible|Al ser un producto dirigido a un público general que no necesariamente debe ser habil con la informatica nuestra aplicación deberá cumplir los estándares de accesibilidad.
+|Usable|La aplicación debe ser fácil de usar y rápida de entender.
 |===
 
-.Motivation
-You should know the quality goals of your most important stakeholders, since they will influence fundamental architectural decisions. Make sure to be very concrete about these qualities, avoid buzzwords.
-If you as an architect do not know how the quality of your work will be judged …
-
-.Form
-A table with quality goals and concrete scenarios, ordered by priorities
 ****
 
-=== Stakeholders
+=== Partes interesadas
 
 [role="arc42help"]
 ****
+[options="header",cols="1,2"]
+|===
+|
+|===
 .Contents
 Explicit overview of stakeholders of the system, i.e. all person, roles or organizations that
 
