--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -48,9 +48,9 @@ Principales objetivos de calidad para satisfacer los intereses de los stakeholde
 |Privacidad|La privacidad para LoMap es de vital importancia debido a que los datos de los usuarios no deben ser accesibles por terceros no deseados. La información se almacenara en los Pods de cada usuario y la información almacenada en servidores comunes deberá ser minimizada y justificada.
 |Flexibilidad|LoMap debe ser una aplicación flexible que permita su uso en otros contextos geográficos alejados de la ciudad de Bruselas.
 |Mantenibilidad|El código de LoMap debe seguir lso estándares de diseño adecuados para generar una aplicación mantenible en el futuro.
-|Escalable|LoMap debe ser una aplicación implementada con la intención de crecer y abarcar más funcionalidades. El código escrito debe facilitar esta dinámica.
-|Accesible|Al ser un producto dirigido a un público general que no necesariamente debe ser habil con la informatica nuestra aplicación deberá cumplir los estándares de accesibilidad.
-|Usable|La aplicación debe ser fácil de usar y rápida de entender.
+|Escalabilidad|LoMap debe ser una aplicación implementada con la intención de crecer y abarcar más funcionalidades. El código escrito debe facilitar esta dinámica.
+|Accesibilidad|Al ser un producto dirigido a un público general que no necesariamente debe ser habil con la informatica nuestra aplicación deberá cumplir los estándares de accesibilidad.
+|Usabilidad|La aplicación debe ser fácil de usar y rápida de entender.
 |===
 
 ****
