--- a/docs/03_system_scope_and_context.adoc
+++ b/docs/03_system_scope_and_context.adoc
@@ -16,6 +16,8 @@ The domain interfaces and technical interfaces to communication partners are amo
 .Form
 Various options:
 
+image:UmlContextDiagram.png["Example UML Diagram"]
+
 * Context diagrams
 * Lists of communication partners and their interfaces.
 ****
