--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -1,16 +1,35 @@
 [[section-introduction-and-goals]]
-== Introducción a la aplicación
+== Introduction and Goals
 
 [role="arc42help"]
+****
+Describes the relevant requirements and the driving forces that software architects and development team must consider. These include
+
+* underlying business goals, essential features and functional requirements for the system
+* quality goals for the architecture
+* relevant stakeholders and their expectations
 ****
 
 LoMap es un aplicación solicitada por el ayuntamiento de Bruselas. Esta se encargará de generar mapas personalizados para cualquier ciudadano que desee utilizarla. En este mapa personalizado se pueden almacenar sitios favoritos (de multitud de categorías), reseñas y se puede generar una red de amigos para tener acceso a sus sitios y reseñas.
 
-****
-
-=== Requisitos funcionales
+=== Requirements Overview
 
 [role="arc42help"]
+****
+.Contents
+Short description of the functional requirements, driving forces, extract (or abstract)
+of requirements. Link to (hopefully existing) requirements documents
+(with version number and information where to find it).
+
+.Motivation
+From the point of view of the end users a system is created or modified to
+improve support of a business activity and/or improve the quality.
+
+.Form
+Short textual description, probably in tabular use-case format.
+If requirements documents exist this overview should refer to these documents.
+
+Keep these excerpts as short as possible. Balance readability of this document with potential redundancy w.r.t to requirements documents.
 ****
 
 Requisitos prioritarios:
@@ -33,11 +52,19 @@ Requisitos de segundo nivel:
 * Los dueños de negocios podrán crear sus mapas con lugares recomendados en las inmediaciones de su negocio.
 * Conectar con el libro de direcciones para mostrar información recomendada.
 
-****
-
-=== Objetivos de calidad
+=== Quality Goals
 
 [role="arc42help"]
+****
+.Contents
+The top three (max five) quality goals for the architecture whose fulfillment is of highest importance to the major stakeholders. We really mean quality goals for the architecture. Don't confuse them with project goals. They are not necessarily identical.
+
+.Motivation
+You should know the quality goals of your most important stakeholders, since they will influence fundamental architectural decisions. Make sure to be very concrete about these qualities, avoid buzzwords.
+If you as an architect do not know how the quality of your work will be judged …
+
+.Form
+A table with quality goals and concrete scenarios, ordered by priorities
 ****
 
 Principales objetivos de calidad para satisfacer los intereses de los stakeholders y las necesidades de los usuarios.
@@ -52,11 +79,26 @@ Principales objetivos de calidad para satisfacer los intereses de los stakeholde
 |Accesibilidad|Al ser un producto dirigido a un público general por lo que nuestra aplicación deberá cumplir los estándares de accesibilidad.
 |===
 
-****
-
-=== Partes interesadas
+=== Stakeholders
 
 [role="arc42help"]
+****
+.Contents
+Explicit overview of stakeholders of the system, i.e. all person, roles or organizations that
+
+* should know the architecture
+* have to be convinced of the architecture
+* have to work with the architecture or with code
+* need the documentation of the architecture for their work
+* have to come up with decisions about the system or its development
+
+.Motivation
+You should know all parties involved in development of the system or affected by the system.
+Otherwise, you may get nasty surprises later in the development process.
+These stakeholders determine the extent and the level of detail of your work and its results.
+
+.Form
+Table with role names, person names, and their expectations with respect to the architecture and its documentation.
 ****
 
 [options="header",cols="1,2"]
@@ -66,8 +108,4 @@ Principales objetivos de calidad para satisfacer los intereses de los stakeholde
 |Ciudadanos de Bruselas|Quieren que la experiencia de uso de la aplicación al ser presentada por su ayuntamiento sea agradable, sencilla y aporte valor.
 |Futuros usuarios|Necesitan que la solución sea genérica y escalable.
 |===
-
-****
-
-[options="header",cols="1,2,2"]
 
