--- a/docs/03_system_scope_and_context.adoc
+++ b/docs/03_system_scope_and_context.adoc
@@ -37,7 +37,7 @@ Alternatively (or additionally) you can use a table.
 The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.
 ****
 
-image:3_Diagrama_Contexto.png["Context Diagram"]
+image:03_Context_Diagram.png["Context Diagram"]
 [options="header",cols="1,2,2"]
 |===
 |Entidad|Entrada|Salida
