--- a/docs/08_concepts.adoc
+++ b/docs/08_concepts.adoc
@@ -50,13 +50,13 @@ image:08-Crosscutting-Concepts-Structure-EN.png["Possible topics for crosscuttin
 ****
 
 
-=== Domain model
+=== Modelo de dominio
 
 image:08_Domain_Model.png["Application domain model"]
 
 
 
-=== Security
+=== Seguridad
 
 La _seguridad_ es el objetivo principal de la aplicación. La app está basada en SOLID, lo que hace que los usuarios tengan el control de su información personal gestionándola ellos mismos a través de su propio POD. Los usuarios se registrarán en la aplicación eligiendo un usuario y contraseña, la cual será encriptada para velar por la seguridad del usuario en todo momento.
 
