--- a/docs/10_quality_scenarios.adoc
+++ b/docs/10_quality_scenarios.adoc
@@ -35,7 +35,7 @@ The quality tree is a high-level overview of the quality goals and requirements:
 
 In any case the tree should include links to the scenarios of the following section.
 ****
-image:10-goalsTree.png["Quality Tree"]
+image:10_Goals_Tree.png["Quality Tree"]
 
 === Quality Scenarios
 
