--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -30,28 +30,92 @@ There are many notations for describing scenarios, e.g.
 
 ****
 
-=== <Runtime Scenario 1>
-
-
-* _<insert runtime diagram or textual description of the scenario>_
-* _<insert description of the notable aspects of the interactions between the
-building block instances depicted in this diagram.>_
-
-It is possible to use a sequence diagram:
+=== <Edit web ID>
 
 [plantuml,"Sequence diagram",png]
 ----
-actor Alice
-actor Bob
-database Pod as "Bob's Pod"
-Alice -> Bob: Authentication Request
-Bob --> Alice: Authentication Response
-Alice  --> Pod: Store route
-Alice -> Bob: Another authentication Request
-Alice <-- Bob: another authentication Response
+header Runtime View
+title WebID change
+Actor User
+Participant LoMap
+Database DataBase as "DataBase" 
+
+...User log in as shown......
+
+User -> LoMap: Asks for WebID change
+User <-- LoMap: Show edit menu to User
+User -> LoMap: Provide the new WebID
+LoMap --> LoMap: Verify WebID
+
+...LoMap wait till get POD permissions......
+
+LoMap -> DataBase: Update user credentials
+LoMap <-- DataBase: Confirm credentials
+
+LoMap -> User: Show confirm dialog
+
+...User log out as shown......
 ----
-=== <Runtime Scenario 2>
+=== <Login and Logout>
+[plantuml,"Log in - log out sequence diagram",png]
+----
+header Runtime View
+title Log in - Log out
+Actor User
+Participant LoMap
+Database DataBase as "DataBase" 
 
-=== ...
+User -> LoMap: Log in with his credentials
+LoMap -> DataBase: Check user credentials
+LoMap <-- DataBase: Confirm credentials
 
-=== <Runtime Scenario n>
+...User interacts with the apllication......
+
+User -> LoMap: Log out from apllication
+LoMap --> User: Show exit dialog and closes user session
+----
+
+===<User Sign Up>
+[plantuml,"Register sequence diagram",png]
+----
+header Runtime View
+title User Registration
+Actor User
+Participant LoMap
+Database DataBase as "DataBase" 
+
+User -> LoMap: Sing up as a new user
+User <-- LoMap: Ask user for his WebID
+User --> LoMap: Bring his WebID
+LoMap --> LoMap: Verify WebID
+
+...LoMap wait till get POD permissions......
+
+LoMap -> DataBase: Add user credentials
+LoMap <-- DataBase: Confirm credentials addition
+User <- LoMap: Show confirm dialog to User
+----
+
+===<Place adding>
+[plantuml,"Add favorite place sequence diagram",png]
+----
+header Runtime View
+title Add favorite place
+Actor User
+Participant LoMap
+Database DataBase as "User's POD" 
+
+...User log in as shown......
+
+User -> LoMap: Wanna add a place
+User <-- LoMap: Show favorite places form
+User -> LoMap: Provide the info
+
+LoMap -> DataBase: Add new user data
+LoMap <-- DataBase: Confirm data addition
+
+LoMap -> User: Show confirm dialog
+
+...User log out as shown......
+
+----
