--- a/docs/07_deployment_view.adoc
+++ b/docs/07_deployment_view.adoc
@@ -38,23 +38,35 @@ when your infrastructure is more complex.
 
 [role="arc42help"]
 ****
+Describe (usually in a combination of diagrams, tables, and text):
+
+*  the distribution of your system to multiple locations, environments, computers, processors, .. as well as the physical connections between them
+*  important justification or motivation for this deployment structure
+* Quality and/or performance features of the infrastructure
+*  the mapping of software artifacts to elements of the infrastructure
+
+For multiple environments or alternative deployments please copy that section of arc42 for all relevant environments.
+****
 
 
- .Motivation
-En el entorno de testing la app se ejecutará en los ordenadores de la universidad y en los ordenadores personales de los desarrolladores de la aplicación. Sin embargo en el entorno de lanzamiento el objetivo es que cualquier ciudadano en bruselas pueda ejecutar la aplicación desde su propio dispositivo.
+.Motivation
+En el entorno de testing la app se ejecutará en los ordenadores de los desarrolladores de la aplicación.
+En este punto del desarrollo de la aplicación no es posible especificar cuál será la estructura de lanzamiento. 
+Más adelante en el desarrollo del proyecto de completará la documentación para representar de forma fiel como se desplegará la aplicación.
 
 
-Quality and/or Performance Features::
-
-El rendimiento de la aplicación dependerá de el nivel de privacidad que queramos tener de forma que a más privacidad, habrá menor rendimiento, debido al tiempo de respuesta de los PODS, que es la estructura que nos aporta mayor grado de privacidad.
+.Quality and/or Performance Features
+La predicción es que nuestra aplicación va a tener dependencias con numerosas APIs. Tanto la API que usemos para el servicio de mapas como la usada para manejar los PODs no depende de nosotros.
+Estas dependencias externas provocan que el rendimiento y disponibilidad de nuestra aplicación se vea condicionada por estos servicios. En una etapa más madura del desarrollo se medirán tiempos de espera para poder concretar el rendimiento medio de la aplicación.
 
 .Mapping of building blocks to infrastructure
 
 Nuestra infraestructura estará formada por los siguientes elementos:
-PODS: Se utilizarán para guardar datos privados.
-Servidor: Contendrá una base de datos con información de la app.
-WebApp: Mostrará la interfaz al usuario.
-RestApi: Será el encargado de la lógica de negocio.
+* PODs: Almacen individual de información, garantiza la privacidad del usuario.
+* Servidor: Contenedor de nuestra aplicación para despliegue. Todavía sin concretar.
+* WebApp: Front-end de nuestra aplicación.
+* RestApi: Back-end de nuestra aplicación.
+* MongoDB: En este punto, base de datos elegida para la aplicación. Con el uso de MongoDB Atlas para su despliegue.
 
 
 
